Enhanced performance on Heuristic fastest by implementing a cache

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,8 +30,9 @@ message ( STATUS "Compiler flags: ${CMAKE_CXX_FLAGS}" )
 # Sources #-----------------------------------------------------------------------------------------
 set ( ZZ3_HEADERS
       sources/depot.hpp
+	  sources/cache_policy.hpp
       sources/heuristic.hpp
-      sources/heuristic_fastest.hpp
+	  sources/heuristic_fastest.hpp
       sources/heuristic_sequence.hpp
       sources/interceptor.hpp
       sources/mobile.hpp
@@ -42,9 +43,9 @@ set ( ZZ3_HEADERS
     )
 
 set ( ZZ3_SOURCES
-      sources/depot.cpp
-      sources/heuristic.cpp
-      sources/heuristic_fastest.cpp
+	  sources/depot.cpp
+	  sources/cache_policy.cpp
+	  sources/heuristic.cpp
       sources/heuristic_sequence.cpp
       sources/interceptor.cpp
       sources/mobile.cpp
