add of Move files in CMakeList

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ set ( ZZ3_HEADERS
       sources/solution.hpp
       sources/units.hpp
       sources/tikzifyer.hpp
+      sources/move.hpp
     )
 
 set ( ZZ3_SOURCES
@@ -53,6 +54,7 @@ set ( ZZ3_SOURCES
       sources/solution.cpp
       sources/units.cpp
       sources/tikzifyer.cpp
+      sources/move.cpp
     )
 
 set ( ZZ3_HEADERS_TEST
