addition of crossmove and its tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ set ( ZZ3_HEADERS_TEST
 	  tests/sequential_tests.hpp
 	  tests/insertmove_tests.hpp
 	  tests/deletemove_tests.hpp
+	  tests/crossmove_tests.hpp
     )
 
 set ( ZZ3_SOURCES_TEST
