Added benchmark base files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,6 +95,11 @@ add_executable ( ${CMAKE_PROJECT_NAME}_test
                  ${ZZ3_SOURCES_TEST}
                )
 
+add_executable ( vnd_benchmark
+				sources/VND_benchmark/VNDBenchmark.cpp
+				${ZZ3_HEADERS}
+				${ZZ3_SOURCES}
+)
 # Build #-------------------------------------------------------------------------------------------
 set_target_properties ( ${CMAKE_PROJECT_NAME}_exec PROPERTIES LINKER_LANGUAGE C )
 target_link_libraries ( ${CMAKE_PROJECT_NAME}_exec ${CMAKE_THREAD_LIBS_INIT} )
