Tests for MoveInsert and MoveExtract modified, new tests for MoveReplace added.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,11 +73,12 @@ set ( ZZ3_HEADERS_TEST
 	  tests/fastest_tests.hpp
 	  tests/sequential_tests.hpp
 	  tests/insertmove_tests.hpp
-	  tests/deletemove_tests.hpp
+	  tests/extractmove_tests.hpp
 	  tests/move2opt_tests.hpp
 	  tests/moveswap1route_tests.hpp
 	  tests/moveswap2routes_tests.hpp
 	  tests/movemove1route_tests.hpp
+	  tests/movereplace_tests.hpp
     )
 
 set ( ZZ3_SOURCES_TEST
