Added BRKGA sources. Developped Metaheuristic to run it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,6 +86,21 @@ set ( ZZ3_HEADERS_TEST
 set ( ZZ3_SOURCES_TEST
     )
 
+set ( ZZ3_BRKGA_HEADERS
+	  sources/BRKGA/BRKGA.h
+	  sources/BRKGA/Population.h
+	  sources/BRKGA/paretofront.h
+	  sources/BRKGA/decoder.h
+	  sources/BRKGA/solver.h
+	  sources/BRKGA/datapoint.h
+	  sources/BRKGA/paretofrontsolver.h
+	)
+
+set ( ZZ3_BRKGA_SOURCES
+	  sources/BRKGA/Population.cpp
+	  sources/BRKGA/decoder.cpp
+	)
+
 include_directories ( sources/ )
 
 # Executables #-------------------------------------------------------------------------------------
@@ -107,10 +122,21 @@ add_executable ( vnd_benchmark
 				sources/VND_benchmark/VNDBenchmark.cpp
 				${ZZ3_HEADERS}
 				${ZZ3_SOURCES}
-)
+			   )
+
+add_executable ( brkga_exec
+				sources/BRKGA/main.cpp
+				${ZZ3_BRKGA_HEADERS}
+				${ZZ3_HEADERS}
+				${ZZ3_BRKGA_SOURCES}
+				${ZZ3_SOURCES}
+			   )
 # Build #-------------------------------------------------------------------------------------------
 set_target_properties ( ${CMAKE_PROJECT_NAME}_exec PROPERTIES LINKER_LANGUAGE C )
 target_link_libraries ( ${CMAKE_PROJECT_NAME}_exec ${CMAKE_THREAD_LIBS_INIT} )
+
+set_target_properties ( brkga_exec PROPERTIES LINKER_LANGUAGE C )
+target_link_libraries ( brkga_exec ${CMAKE_THREAD_LIBS_INIT} )
 
 set_target_properties ( ${CMAKE_PROJECT_NAME}_test PROPERTIES LINKER_LANGUAGE C )
 target_link_libraries ( ${CMAKE_PROJECT_NAME}_test ${CMAKE_THREAD_LIBS_INIT} )
